Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/Compliance_Scan_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores the results of a compliance scan</description>
    <label>Compliance Scan Result</label>
    <nameField>
        <displayFormat>Scan Result - {000000000}</displayFormat>
        <label>Scan Result Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Scan Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>