Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>