Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>