Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label># Findings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>