Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Git_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Git_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Snapshot</label>
    <referenceTo>Git_Backup__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>