Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Highest_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>Highest_Rule_Action__c</fullName>
    <description>The most severe action in the Compliance Findings.</description>
    <inlineHelpText>The most severe action in the Compliance Findings.</inlineHelpText>
    <label>Highest Rule Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Action</valueSetName>
    </valueSet>
</CustomField>