Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Highest_Severity__c.field-meta.xml
<CustomField>
    <fullName>Highest_Severity__c</fullName>
    <description>Highest Severity of the Compliance Findings.</description>
    <inlineHelpText>Highest Severity of the Compliance Findings.</inlineHelpText>
    <label>Highest Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Severity</valueSetName>
    </valueSet>
</CustomField>