Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>