Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Details__c</fullName>
    <label>Resolution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>