Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Scan_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Scan_Duration_in_Minutes__c</fullName>
    <formula>(Scan_End__c - Scan_Start__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scan Duration in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>