Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Scan_End__c.field-meta.xml
<CustomField>
    <fullName>Scan_End__c</fullName>
    <label>Scan End</label>
    <type>DateTime</type>
</CustomField>