Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/fields/Scan_Start__c.field-meta.xml
<CustomField>
    <fullName>Scan_Start__c</fullName>
    <label>Scan Start</label>
    <type>DateTime</type>
</CustomField>