Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/recordTypes/Copado.recordType-meta.xml
<RecordType>
    <fullName>Copado</fullName>
    <active>true</active>
    <description>This record type is used for scan results produced by Copado.</description>
    <label>Copado</label>
</RecordType>