Dummy_Package_for_scratch_org/main/default/objects/Compliance_Scan_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Findings__c</columns>
    <columns>Environment__c</columns>
    <columns>Highest_Severity__c</columns>
    <columns>Highest_Rule_Action__c</columns>
    <columns>Scan_Duration_in_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>